<resources>
    <string name="app_name">TipCalculator</string>
    <string name="defaultVal">0.00</string>
    <string name="calculate">Calculate Tip</string>
    <string name="app_label">Tip Calculator</string>
    <string name="cost">Cost of Service</string>
    <string name="labelForTip">Service Tip</string>
    <string name="onePercent">1%</string>
    <string name="tenPercent">10%</string>
</resources>